<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/q2_Heading"
        android:textColor="@color/textColorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/textColorWhite50"
        android:hint="@string/q2_FName"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/goToQ3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.001" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:hint="@string/q2_LName"
        android:backgroundTint="@color/textColorWhite50"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/goToQ3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fName"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/contactNum"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_below="@id/lName"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/textColorWhite50"
        android:hint="@string/q2_Phone"
        android:inputType="phone"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/goToQ3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lName"
        app:layout_constraintVertical_bias="0.098" />

    <Spinner
        android:id="@+id/favFood"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/textColorWhite50"
        android:popupBackground="@color/backgroundColorLight"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite50"
        app:layout_constraintBottom_toTopOf="@+id/goToQ3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNum"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/goToQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favFood"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/q2_goToQ3"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorWhite50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favFood" />


</androidx.constraintlayout.widget.ConstraintLayout>
